[package]
name = "arraystring"
version = "0.1.1"
repository = "https://github.com/paulocsanz/arraystring"
description = "Array based string with customizable maximum size"
authors = ["Paulo Cabral Sanz <paulosanz@poli.ufrj.br>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["string", "array", "stack", "inline", "no_std"]
categories = ["data-structures"]

[lib]
name = "arraystring"
crate_type = ["lib", "cdylib", "staticlib"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "string_benchmark"
harness = false

[[bench]]
name = "all_benchmark"
harness = false

[dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true }
diesel = { version = "1.3", optional = true }

[features]
default = ["std"]
std = []
logs = ["log", "env_logger"]
serde-traits = ["serde"]
diesel-traits = ["diesel"]
ffi = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaraound"]
features = ["logs", "serde-traits", "diesel-traits", "std"]
