[package]
name = "arraystring"
version = "0.1.1"
repository = "https://github.com/paulocsanz/arraystring"
description = "Array based string with customizable maximum size"
authors = ["Paulo Cabral Sanz <paulosanz@poli.ufrj.br>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["string", "array", "stack", "inline", "no_std"]
categories = ["data-structures"]
edition = "2018"

[lib]
name = "arraystring"
crate_type = ["lib"]

[dev-dependencies]
serde_json = "1.0"
criterion = "0.2"
#diesel = { version = "1.3", features = ["sqlite", "postgres", "mysql"] }

[[bench]]
name = "from"
harness = false

[[bench]]
name = "clone"
harness = false

[dependencies]
typenum = "1.10"
generic-array = "0.12"
log = { version = "0.4", optional = true }
env_logger = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
#diesel = { version = "1.3", optional = true }

[features]
default = ["std"]
std = []
logs = ["log", "env_logger"]
serde-traits = ["serde"]
#diesel-traits = ["diesel"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaraound"]
features = ["logs", "serde-traits", "diesel-traits", "std"]
