[package]
name = "arraystring"
version = "0.2.0"
repository = "https://github.com/paulocsanz/arraystring"
description = "String based on generic-array"
authors = ["Paulo Cabral Sanz <paulosanz@poli.ufrj.br>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["string", "array", "stack", "inline", "no_std"]
categories = ["data-structures"]
edition = "2018"

[lib]
name = "arraystring"
crate_type = ["lib"]

[[bench]]
name = "from"
harness = false

[[bench]]
name = "clone"
harness = false

[dev-dependencies]
serde_json = "1.0"
criterion = "0.2"
env_logger = "0.5"
#diesel = { version = "1.3", features = ["sqlite", "postgres", "mysql"] }

[dependencies]
generic-array = "0.12"
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
#diesel = { version = "1.3", optional = true }

[features]
default = ["std"]
std = []
logs = ["log"]
serde-traits = ["serde"]
#diesel-traits = ["diesel"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaraound"]
features = ["logs", "serde-traits", "std"]
